tests/files/type_checker_tests/should_fail/180.cmdr
//Should fail calling something not a function
"hi"();
